cmake_minimum_required(VERSION 3.20)
project(ThreadPoolTaskScheduler)
set(CMAKE_CXX_STANDARD 20)
add_executable(ThreadPoolTaskScheduler main.cpp thread_pool.cc)
target_include_directories(ThreadPoolTaskScheduler PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(ThreadPoolTaskScheduler pthread)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)